tests/error/enum_errors/fun_overwrite_variant_2.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:

    @guppy
    def name(self) -> str:
        return "name"

    name = {"x": int}


MyEnum.compile()
