tests/error/enum_errors/fun_overwrite_variant_2.err
Error: Not a Guppy method (at $FILE:8:4)
  | 
6 | 
7 |     @guppy
8 |     def name(self) -> str:
  |     ^^^^^^^^^^^^^^^^^^^^^^
9 |         return "name"
  | ^^^^^^^^^^^^^^^^^^^^^ Method `name` of enum `MyEnum` is not a Guppy function

Help: Add a `@guppy` annotation to turn `name` into a Guppy method

Guppy compilation failed due to 1 previous error
